--- a/topNews/build.gradle
+++ b/topNews/build.gradle
@@ -42,5 +42,6 @@ dependencies {
     compile 'com.android.support:support-v4:18.0.0'
     compile 'org.jsoup:jsoup:1.7.2'
     compile 'cn.leancloud.android:avoscloud-sdk:v3.3+'
+    compile 'com.github.chrisbanes.actionbarpulltorefresh:library:+'
 
 }
